# auto-trade-v2

./: .gitignore  .gitmodules  pyproject.toml  test.py
common/: KIS_API_Helper_KR.py  KIS_API_Helper_US.py  KIS_Common.py  chat_client.py  env_type.py  kis_make_token.py
dinamic_asset/: Dynamic_Asset_GTAA5_KR.py  Dynamic_Asset_GTAA5_US.py  Dynamic_Asset_GTAA5_US_A.py
static_asset/: Static_Asset_KR.py  Static_Asset_US.py  Static_Asset_US_A.py
